@@ -1,10 +1,8 @@
 import copy
 import html
 import importlib.resources
-import warnings
 
 import dclab
-from dclab.kde import contours as kdec
 import numpy as np
 from PyQt6 import uic, QtCore, QtGui, QtWidgets
 import pyqtgraph as pg
@@ -602,40 +600,17 @@ def add_scatter(plot_item, plot_state, rtdc_ds, slot_state):
 def compute_contours(plot_state, rtdc_ds):
     gen = plot_state["general"]
     con = plot_state["contour"]
-    try:
-        x, y, density = plot_cache.get_contour_data(
-            rtdc_ds=rtdc_ds,
-            xax=gen["axis x"],
-            yax=gen["axis y"],
-            xacc=con["spacing x"],
-            yacc=con["spacing y"],
-            xscale=gen["scale x"],
-            yscale=gen["scale y"],
-            kde_type=gen["kde"],
-        )
-    except ValueError:
-        # most-likely there is nothing to compute a contour for
-        return []
-    if density.shape[0] < 3 or density.shape[1] < 3:
-        warnings.warn("Contour not possible; spacing may be too large!",
-                      ContourSpacingTooLarge)
-        return []
-    plev = kdec.get_quantile_levels(
-        density=density,
-        x=x,
-        y=y,
-        xp=rtdc_ds[gen["axis x"]][rtdc_ds.filter.all],
-        yp=rtdc_ds[gen["axis y"]][rtdc_ds.filter.all],
-        q=np.array(con["percentiles"]) / 100,
-        normalize=True)
-    contours = []
-    for level in plev:
-        # make sure that the contour levels are not at the boundaries
-        if not (np.allclose(level, 0, atol=1e-12, rtol=0)
-                or np.allclose(level, 1, atol=1e-12, rtol=0)):
-            cc = kdec.find_contours_level(
-                density, x=x, y=y, level=level)
-            contours.append(cc)
+    contours = plot_cache.get_contour_data(
+        rtdc_ds=rtdc_ds,
+        xax=gen["axis x"],
+        yax=gen["axis y"],
+        xacc=con["spacing x"],
+        yacc=con["spacing y"],
+        xscale=gen["scale x"],
+        yscale=gen["scale y"],
+        kde_type=gen["kde"],
+        quantiles=[p/100 for p in con["percentiles"]]
+    )
     return contours
 
 
