@@ -5,7 +5,7 @@ from . import util
 
 
 def get_contour_data(rtdc_ds, xax, yax, xacc, yacc, xscale, yscale,
-                     kde_type="histogram", kde_kwargs=None):
+                     kde_type="histogram", kde_kwargs=None, quantiles=None):
     if kde_kwargs is None:
         kde_kwargs = {}
     rtdc_ds.apply_filter()
@@ -17,11 +17,12 @@ def get_contour_data(rtdc_ds, xax, yax, xacc, yacc, xscale, yscale,
         kde_type, kde_kwargs]
     shash = util.hashobj(tohash)
     if shash in cache_data:
-        x, y, den = cache_data[shash]
+        contours = cache_data[shash]
     else:
-        # compute scatter plot data
+        # compute contour plot data
         kde_instance = KernelDensityEstimator(rtdc_ds=rtdc_ds)
-        x, y, den = kde_instance.get_contour(
+        contours = kde_instance.get_contour_lines(
+            quantiles=quantiles,
             xax=xax,
             yax=yax,
             xacc=xacc,
@@ -31,8 +32,8 @@ def get_contour_data(rtdc_ds, xax, yax, xacc, yacc, xscale, yscale,
             kde_type=kde_type,
             kde_kwargs=kde_kwargs)
         # save in cache
-        cache_data[shash] = x, y, den
-    return x, y, den
+        cache_data[shash] = contours
+    return contours
 
 
 def get_scatter_data(rtdc_ds, downsample, xax, yax, xscale, yscale,
